...
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="150dp"
        android:background="@color/posts_color"
        android:orientation="vertical"
        android:id="@+id/rateFacilityView"
        android:elevation="20dp">

        <TextView
            android:id="@+id/RateFacilityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:scaleY="0.7"
            android:rating="0.0"
            android:theme="@style/RatingBar"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="25dp"
            android:background="@color/UBCPurpleDark"
            android:ems="10"
            android:gravity="start|top"
...
                android:textColor="@color/UBCyellow"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_button_review"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:background="@color/UBCPurpleLight"
...
