...
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/layout_border"
        android:id="@+id/facility1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintHorizontal_bias="0.0"
...
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_close_or_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_baseline_refresh_24" />

...
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_down_facility" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_show_mnu" />

...
